# ical_rpt

./: README.md  flake.nix  pyproject.toml
.helix/: languages.toml
src/ical_rpt/: cli.py
