[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = [ "py311" ]

[tool.isort]
profile = "black"

[tool.poetry]
name = "ical_rpt"
version = "0.0.1"
description = "A tool for querying ical calendars"
license = "MIT"
authors = [ "Charles Duffy <charles@dyfis.net>" ]

[tool.poetry.dependencies]
python = "^3.11"
icalendar = "^5.0.11"
httpx = "^0.26.0"

[tool.poetry.scripts]
ical-rpt = "ical_rpt.cli:main"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.344"
black = "^23.12.1"
isort = "^5.13.2"

[tool.pyright]
executionEnvironments = [ { root = "src" } ]
